Burger menu fixed. Responsive images on mobile fixed

--- a/src/assets/scss/blocks/burger.scss
+++ b/src/assets/scss/blocks/burger.scss
@@ -5,6 +5,7 @@
   width: 35px;
   height: 35px;
   cursor: pointer;
+  z-index: 1;
   @include tablet-min {
     display: none;
   }
