--- a/src/assets/scss/sections/carousel.scss
+++ b/src/assets/scss/sections/carousel.scss
@@ -1,18 +1,32 @@
 .carousel {
 
   &-nav {
-    position: relative;
     background-color: rgba($color-black, 0.6);
+    position: relative;
     min-height: 35px;
+    @include tablet-min {
+      position: relative;
+    }
 
     .nav {
       display: none;
+      min-height: calc(431px + 35px);
+      padding-top: 100px;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      background-color: rgba($color-black, 0.9);
+      z-index: 1;
       &.active {
         display: block;
       }
       @include tablet-min {
         display: block;
         position: static;
+        background-color: inherit;
+        min-height: auto;
+        padding-top: 0;
       }
     }
 
@@ -241,7 +255,7 @@
 
   &-description {
     color:  $color-white;
-    font-size: 19px;
+    font-size: 18px;
     line-height: 1.2;
     font-weight: 700;
     text-transform: uppercase;
@@ -250,6 +264,7 @@
     margin-left: auto;
     margin-right: auto;
     @include tablet-min {
+      font-size: 19px;
       text-align: left;
       margin-left: 0;
       margin-right: 0;
@@ -354,11 +369,14 @@
     position: relative;
     display: none;
     width: 100%;
-    height: 100%;
+    min-height: calc(431px + 35px);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     z-index: 0;
+    @include tablet-min {
+      height: 100%;
+    }
     &.active {
       display: block;
     }
